# spectra-assure-sdk

./: .gitignore  README.md  makefile  pylintrc  pyproject.toml  testLocalWhl.sh
doc/: checks.md  create.md  delete.md  download.md  edit.md  list.md  report.md  scan.md  status.md
examples/: api_client_example.py
spectra_assure_api_client/: __init__.py  spectra_assure_api_operations.py  version.py
spectra_assure_api_client/communication/: api.py  core.py  delete.py  download_criteria.py  downloader.py  downloader_exceptions.py  exceptions.py  get.py  patch.py  post.py
spectra_assure_api_client/operations/: base.py  checks.py  create.py  delete.py  download.py  edit.py  list.py  report.py  scan.py  status.py
tests/: .gitignore  api_client_example.py  makefile  myConfig.json  startProg.py  t1.py  test-download.py  test-list-all.py  test-one.sh  test-package-steps.py  test-project-steps.py  test-version-steps.py  testGroup.py  testPackage.py  testProject.py  testVersion.py  testing.py
tests/spectraAssureTools/: __init__.py  spectraAssureApiConfig.py  spectraAssureConfigFile.py  spectraAssureConfigFileJson.py  spectraAssureEnvironmentVars.py  spectraAssureExceptions.py  spectraAssureProgramStarter.py  version.py-old
